Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1290

CHECK failures when some CPUs are disabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.6.0
    • 0.7.0
    • util
    • None

    Description

      "Bsinghal" on the Cloudera forum reported this bug:

      I have a server with 48 cores. I disabled 24 cores using the following script
      for((i=12;i<=23;i++)); do echo 0 | sudo tee /sys/devices/system/cpu/cpu$i/online; done
      for((i=36;i<=47;i++)); do echo 0 | sudo tee /sys/devices/system/cpu/cpu$i/online; done

      After this when I start kudu-master service, it fails with the following error:
      F0107 16:27:30.428330 4140 locks.h:175] Check failed: cpu < n_cpus_ (31 vs. 24)

      /proc/cpuinfo shows that only 24 processors are there, but somehow kudu-master thinks there are 31 processor.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: